# homeless_test_python

./: .env.sample  .gitignore  README.md  pyproject.toml  requirements.txt
allure-report/widgets/: summary.json
homeless_test_python/: app.py
homeless_test_python/model/: app.py
homeless_test_python/model/data/: messages.py  user.py
homeless_test_python/model/elements/: field.py
homeless_test_python/model/pages/: helppage.py  howtohelp.py  mainpage.py
notifications/: config.json
tests/: conftest.py  test_help_page.py  test_how_to_help_page.py  test_main_page.py
