[tool.poetry]
name = "homeless-test-python"
version = "0.1.0"
description = "UI part of the graduation project for the course QA.GURU (Python)"
authors = ["slazarska <slazarska@protonmail.com>"]


[tool.poetry.dependencies]
python = "^3.10"
pytest = "7.2.0"
python-dotenv = "^0.21.0"
selene = "2.0.0b4"
allure-pytest = "2.12.0"
allure-python-commons = "2.12.0"


[tool.pytest.ini_options]
addopts="-vv --alluredir=allure-results --clean-alluredir"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
